--- a/test/functional/spec/transactions/read-pref.yml
+++ b/test/functional/spec/transactions/read-pref.yml
@@ -22,6 +22,20 @@ tests:
             mode: primary
           session: session0
         result: 1
+      - name: find
+        arguments:
+          session: session0
+        result:
+          - _id: 1
+      - name: aggregate
+        arguments:
+          pipeline:
+            - $project:
+                _id: 1
+          batchSize: 3
+          session: session0
+        result:
+          - _id: 1
       - name: commitTransaction
         arguments:
           session: session0
@@ -52,6 +66,23 @@ tests:
         result:
           # Client-side error.
           errorContains: read preference in a transaction must be primary
+      - name: find
+        arguments:
+          readPreference:
+            mode: secondary
+          session: session0
+        result:
+          errorContains: read preference in a transaction must be primary
+      - name: aggregate
+        arguments:
+          pipeline:
+            - $project:
+                _id: 1
+          readPreference:
+            mode: secondary
+          session: session0
+        result:
+          errorContains: read preference in a transaction must be primary
       - name: commitTransaction
         arguments:
           session: session0
@@ -74,6 +105,23 @@ tests:
           session: session0
         result:
           # Client-side error.
+          errorContains: read preference in a transaction must be primary
+      - name: find
+        arguments:
+          readPreference:
+            mode: secondary
+          session: session0
+        result:
+          errorContains: read preference in a transaction must be primary
+      - name: aggregate
+        arguments:
+          pipeline:
+            - $project:
+                _id: 1
+          readPreference:
+            mode: secondary
+          session: session0
+        result:
           errorContains: read preference in a transaction must be primary
       - name: commitTransaction
         arguments:
@@ -103,36 +151,23 @@ tests:
         result:
           # Client-side error.
           errorContains: read preference in a transaction must be primary
-      - name: commitTransaction
+      - name: find
         arguments:
           session: session0
-
-    outcome:
-      collection:
-        data: []
-
-  - description: read and write
-
-    skipReason: Server changes needed for commitTransaction on secondary.
-
-    operations:
-      - name: startTransaction
+          readPreference:
+            mode: secondary
+        result:
+          errorContains: read preference in a transaction must be primary
+      - name: aggregate
         arguments:
-          session: session0
-      - name: count
-        arguments:
+          pipeline:
+            - $project:
+                _id: 1
           readPreference:
             mode: secondary
           session: session0
-        result: 0
-      - name: insertOne
-        arguments:
-          document:
-            _id: 1
-          session: session0
         result:
-          # Client-side error.
-          errorContains: transaction readPreference changed
+          errorContains: read preference in a transaction must be primary
       - name: commitTransaction
         arguments:
           session: session0
