--- a/test/functional/spec/transactions/transaction-options.yml
+++ b/test/functional/spec/transactions/transaction-options.yml
@@ -256,7 +256,7 @@ tests:
 
     clientOptions:
       readConcernLevel: local
-      w: "1"
+      w: 1
 
     sessionOptions:
       session0:
@@ -375,7 +375,7 @@ tests:
 
     clientOptions:
       readConcernLevel: local
-      w: "1"
+      w: 1
 
     sessionOptions:
       session0:
@@ -457,7 +457,7 @@ tests:
   - description: readConcern local in defaultTransactionOptions
 
     clientOptions:
-      w: "1"
+      w: 1
 
     sessionOptions:
       session0:
@@ -638,6 +638,70 @@ tests:
             readConcern:
             writeConcern:
           command_name: abortTransaction
+          database_name: admin
+
+    outcome: *outcome
+
+  - description: client writeConcern ignored for bulk
+
+    clientOptions:
+      w: majority
+
+    operations:
+      - name: startTransaction
+        arguments:
+          session: session0
+          options:
+            writeConcern:
+              w: 1
+      - name: bulkWrite
+        arguments:
+          requests:
+            - name: insertOne
+              arguments:
+                document: {_id: 1}
+          session: session0
+        result:
+          deletedCount: 0
+          insertedIds: {0: 1}
+          matchedCount: 0
+          modifiedCount: 0
+          upsertedCount: 0
+          upsertedIds: {}
+      - name: commitTransaction
+        arguments:
+          session: session0
+
+    expectations:
+      - command_started_event:
+          command:
+            insert: test
+            documents:
+              - _id: 1
+            ordered: true
+            readConcern:
+            lsid: session0
+            txnNumber:
+              $numberLong: "1"
+            stmtId: 0
+            startTransaction: true
+            autocommit: false
+            # No writeConcern.
+            writeConcern:
+          command_name: insert
+          database_name: transaction-tests
+      - command_started_event:
+          command:
+            commitTransaction: 1
+            lsid: session0
+            txnNumber:
+              $numberLong: "1"
+            stmtId: 1
+            startTransaction:
+            autocommit: false
+            writeConcern:
+              w: 1
+          command_name: commitTransaction
           database_name: admin
 
     outcome: *outcome
